# SharedMemoryFileTransfer

./: CMakeLists.txt  README.md  main.cpp
include/: Logger.h  MemoryManager.h  SharedMemoryClient.h  SharedMemoryConsts.h  SharedMemoryServer.h  TransferChunk.h
src/: Logger.cpp  MemoryManager.cpp  SharedMemoryClient.cpp  SharedMemoryConsts.cpp  SharedMemoryServer.cpp  TransferChunk.cpp
